--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -1,3 +1,14 @@
+.item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+  background: var(--color-light);
+  border-radius: 8px;
+  box-shadow: var(--shadow-smal);
+  padding: 20px 40px;
+}
+
 .title {
   font-size: 32px;
   font-weight: 700;
